[package]
exclude = ["*.jpg"]
name = "simdnoise"
version = "3.1.6"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD accelerate noise library with runtime feature detection"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdnoise/"
readme = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
repository = "https://github.com/jackmott/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2018"

[dependencies]
simdeez = "1.0.7"
#simdeez = {path = "../simdeez"}

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmarks"
harness = false
