[package]
exclude = ["*.jpg"]
name = "simdnoise"
version = "3.1.7"
authors = ["Jack Mott <jack.mott@gmail.com>"]
description = "SIMD accelerate noise library with runtime feature detection"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/simdnoise/"
readme = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
repository = "https://github.com/verpeteren/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2018"

[dependencies]
#simdeez = "1.0.8"
simdeez = {path = "../simdeez"}

[dev-dependencies]
criterion = "0.4.0"
byteorder = "1.4.3"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
